fixed overflowing containers

--- a/src/App.css
+++ b/src/App.css
@@ -1651,11 +1651,3 @@ html, body {
   padding-left: 0;
   padding-right: 0;
 }
-
-@media (max-width: 768px) {
-  .projects-hero,
-  .blogs-section {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-}
